sq: finally green again :joy:
what a mess